fix the text aicon alignment and remove any link style inside btn since its bad practice

--- a/front-end/src/components/ui/button/PrimaryBtn/PrimaryBtn.module.css
+++ b/front-end/src/components/ui/button/PrimaryBtn/PrimaryBtn.module.css
@@ -1,4 +1,8 @@
 .btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
   padding: 9px 18px;
   border-radius: 4px;
   color: #e6e6e6;
@@ -7,10 +11,6 @@
   font-size: 16px;
   font-weight: 500;
   cursor: pointer;
-}
-.btn > a {
-  text-decoration: none;
-  color: #e6e6e6;
 }
 
 @media screen and (max-width: 510px) {
